--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -36,18 +36,18 @@
 
     <hr />
 
-    <!-- TODO #2 - Loop over jobs map to display all job fields -->
+    <!-- TODO #2 - COMPLETE - Loop over jobs map to display all job fields -->
 
-    <div th:fragment="search-all">
-        <table class="job-listing" th:each="job: ${jobResults}">
-            <tr th:each="key: ${job.keySet()}">
-                <td th:text="${key}+': '+${job.get(key)}"></td>
-            </tr>
-        <br/>
+    <div th:if="${jobs} and ${jobs.size()}">
+        <h2 th:text="${jobs.size()} + ' Result(s)'"></h2>
 
-        </table>
-
-
+        <div th:each="job: ${jobs}">
+            <table class="job-listing">
+                <tr th:each="item, idx: ${job}" th:class="${idx.odd} ? 'odd'">
+                    <td th:text="${item.key}"></td>
+                    <td th:text="${item.value}"></td>
+                </tr></table>
+        </div>
 
     </div>
 
